add service detail
